--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -26,5 +26,6 @@
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
     <p>My name is Eurese</p>
+    <script src="scripts.js"/>
   </body>
 </html>
