--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -26,6 +26,6 @@
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
     <p>My name is Eurese</p>
-    <script src="scripts.js"/>
+    <script src="/starter/challenge/challenge1.js" />
   </body>
 </html>
